--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-logo">
-            Header Logo
-        </div>
-        <ul class="nav-menu">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header line three</a></li>
-        </ul>
-    </div>
-
     <div class="hero">
+        <div class="header">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <ul class="header-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header line three</a></li>
+            </ul>
+        </div>
         <div class="hero-text">
             <h1 class="hero-heading">This website is awesome</h1>
             <p class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller
@@ -30,13 +29,13 @@
         </div>
         <div class="hero-image">
             <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="Sample Image">
+                alt="Hand typing on a MacBook">
         </div>
     </div>
 
-    <div class="content">
-        <div class="info">
-            <h2>Some random information.</h2>
+    <div class="container">
+        <div class="information">
+            <h2 class="info-header-text">Some random information.</h2>
             <div class="info-cards">
                 <div class="info-card">
                     <div class="info-card-image"></div>
@@ -56,19 +55,19 @@
                 </div>
             </div>
         </div>
-        <div class="testimonial">
-            <p class="testimonial-quote">
+        <div class="quote">
+            <p class="quote-text">
                 <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
                     maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
                 <br>
-                <strong class="testimonial-author">
+                <strong class="quote-author">
                     -Thor, God of Thunder
                 </strong>
             </p>
         </div>
-        <div class="cta">
-            <div class="cta-box">
-                <div class="cta-description">
+        <div class="call-to-action">
+            <div class="cta-card">
+                <div class="cta-text">
                     <p>Call to action! It's time!</p>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
