Fix spelling error from 'line' to 'link' in header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="header-links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
-                <li><a href="#">header line three</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
         <div class="content">
